Consistently named ssl private key
[#152971977]

Signed-off-by: Desmond Pompa Alarcon Rawls <captaingrover@gmail.com>

--- a/pipelines/terraforming.yml
+++ b/pipelines/terraforming.yml
@@ -39,7 +39,7 @@ jobs:
       AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
       AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
       AWS_SSL_CERT: {{ssl_cert}}
-      AWS_SSL_CERT_PRIVATE_KEY: {{ssl_cert_private_key}}
+      AWS_SSL_PRIVATE_KEY: {{ssl_cert_private_key}}
 
 - name: terraforming-gcp
   serial: true
@@ -56,4 +56,4 @@ jobs:
       GCP_PROJECT_ID: {{gcp_project_id}}
       GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
       GCP_SSL_CERT: {{ssl_cert}}
-      GCP_SSL_CERT_PRIVATE_KEY: {{ssl_cert_private_key}}
+      GCP_SSL_PRIVATE_KEY: {{ssl_cert_private_key}}
