--- a/pipelines/terraforming.yml
+++ b/pipelines/terraforming.yml
@@ -2,6 +2,7 @@ groups:
 - name: terraforming
   jobs:
   - terraforming-aws
+  - terraforming-azure
   - terraforming-gcp
 
 resources:
@@ -11,12 +12,21 @@ resources:
     branch: master
     uri: git@github.com:pivotal-cf/terraforming-aws.git
     private_key: {{cf_infra_bot_user_github_private_key}}
+
+- name: terraforming-azure
+  type: git
+  source:
+    branch: master
+    uri: git@github.com:pivotal-cf/terraforming-azure.git
+    private_key: {{cf_infra_bot_user_github_private_key}}
+
 - name: terraforming-gcp
   type: git
   source:
     branch: master
     uri: git@github.com:pivotal-cf/terraforming-gcp.git
     private_key: {{cf_infra_bot_user_github_private_key}}
+
 - name: infrastructure-ci
   type: git
   source:
