Split aws parallel acceptance tests into two groups.
- A lot of terraform timeouts, aws timeouts, and number of requests
exceeded errors.

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -247,6 +247,7 @@ jobs:
         BBL_TEST_ENV_ID_PREFIX: bbl-ci
         BBL_TEST_PACKAGES: bbl
         RUN_TEST: bbl-up
+  - aggregate:
     - task: plan
       file: ci/scripts/bosh-bootloader/acceptance/task.yml
       params:
@@ -312,7 +313,7 @@ jobs:
       file: ci/scripts/bosh-bootloader/acceptance/task.yml
       params:
         BBL_IAAS: vsphere
-        BBL_VSPHERE_NETWORK_NAME: {{vsphere_network_name}}
+        BBL_VSPHERE_NETWORK: {{vsphere_network_name}}
         BBL_VSPHERE_SUBNET: {{vsphere_subnet}}
         BBL_VSPHERE_VCENTER_IP: {{vsphere_vcenter_ip}}
         BBL_VSPHERE_VCENTER_USER: {{vsphere_vcenter_user}}
@@ -331,7 +332,7 @@ jobs:
       file: ci/scripts/bosh-bootloader/acceptance/task.yml
       params:
         BBL_IAAS: vsphere
-        BBL_VSPHERE_NETWORK_NAME: {{vsphere_network_name}}
+        BBL_VSPHERE_NETWORK: {{vsphere_network_name}}
         BBL_VSPHERE_SUBNET: {{vsphere_subnet}}
         BBL_VSPHERE_VCENTER_IP: {{vsphere_vcenter_ip}}
         BBL_VSPHERE_VCENTER_USER: {{vsphere_vcenter_user}}
