Add bbl linux binary to bump brew tap task.

--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -1541,6 +1541,7 @@ jobs:
           version: { tag: bbl-release/number }
           globs:
           - bbl-*_osx
+          - bbl-*_linux_x86-64
         trigger: true
       - get: ci
         resource: infrastructure-ci
