experimental: use latest relint image in consul pipeline
[#153077368]

Signed-off-by: Desmond Pompa Alarcon Rawls <captaingrover@gmail.com>

--- a/dockerfiles/cf-deployment-concourse-tasks-w-gcloud/Dockerfile
+++ b/dockerfiles/cf-deployment-concourse-tasks-w-gcloud/Dockerfile
@@ -1,4 +1,4 @@
-FROM relintdockerhubpushbot/cf-deployment-concourse-tasks
+FROM relintdockerhubpushbot/cf-deployment-concourse-tasks:latest
 MAINTAINER https://github.com/cloudfoundry/infrastructure-ci
 
 RUN \
