Revert "experimental: use latest relint image in consul pipeline"
This reverts commit d106e76abe1ef5ef58bb2f15d18dc69571bbfdfa.

--- a/dockerfiles/cf-deployment-concourse-tasks-w-gcloud/Dockerfile
+++ b/dockerfiles/cf-deployment-concourse-tasks-w-gcloud/Dockerfile
@@ -1,4 +1,4 @@
-FROM relintdockerhubpushbot/cf-deployment-concourse-tasks:latest
+FROM relintdockerhubpushbot/cf-deployment-concourse-tasks
 MAINTAINER https://github.com/cloudfoundry/infrastructure-ci
 
 RUN \
