Revert "Use dockerfiles input instead of the string."
This reverts commit 04c6cd4bbc7a8c217b4e6ffc91c005163907d30f.

--- a/scripts/bosh-bootloader/prepare-docker-workspace/task.yml
+++ b/scripts/bosh-bootloader/prepare-docker-workspace/task.yml
@@ -22,4 +22,4 @@ run:
   - -c
   - |
     cp -R ./bosh-bootloader docker-workspace/
-    cp "${dockerfiles}/${DOCKERFILE}" docker-workspace/
+    cp "dockerfiles/${DOCKERFILE}" docker-workspace/
