--- a/scripts/bosh-bootloader/acceptance/task.yml
+++ b/scripts/bosh-bootloader/acceptance/task.yml
@@ -22,7 +22,7 @@ params:
   BBL_AZURE_TENANT_ID:
   BBL_AZURE_CLIENT_ID:
   BBL_AZURE_CLIENT_SECRET:
-  BBL_AZURE_LOCATION:
+  BBL_AZURE_REGION:
   BBL_GCP_SERVICE_ACCOUNT_KEY:
   BBL_GCP_REGION:
   BBL_GCP_ZONE:
