Add silver searcher to our docker images.

--- a/dockerfiles/deployment/Dockerfile
+++ b/dockerfiles/deployment/Dockerfile
@@ -10,6 +10,7 @@ RUN \
             apt-transport-https \
             awscli \
             openssl \
+            silversearcher-ag \
             unzip \
       && \
       apt-get clean
