--- a/pipelines/consul.yml
+++ b/pipelines/consul.yml
@@ -193,11 +193,13 @@ jobs:
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks
+    - get: cf-deployment-concourse-tasks-w-gcloud-image
     - get: stemcell
       resource: gcp-stemcell
       trigger: true
   - task: bbl-up
     file: cf-deployment-concourse-tasks/bbl-up/task.yml
+    image: cf-deployment-concourse-tasks-w-gcloud-image
     params:
       BBL_IAAS: gcp
       BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
@@ -224,6 +226,7 @@ jobs:
       file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
       params:
         BBL_STATE_DIR: consats-linux-turbulence
+        BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
       input_mapping:
         bbl-state: updated-bbl-state
 
@@ -278,8 +281,10 @@ jobs:
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks
+    - get: cf-deployment-concourse-tasks-w-gcloud-image
   - task: cleanup-consats-linux-deployment
     file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
+    image: cf-deployment-concourse-tasks-w-gcloud-image
     params:
       BBL_STATE_DIR: consats-linux-turbulence
       CLEAN_ALL: true
@@ -310,11 +315,13 @@ jobs:
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks
+    - get: cf-deployment-concourse-tasks-w-gcloud-image
     - get: stemcell
       resource: gcp-stemcell
       trigger: true
   - task: bbl-up
     file: cf-deployment-concourse-tasks/bbl-up/task.yml
+    image: cf-deployment-concourse-tasks-w-gcloud-image
     params:
       BBL_IAAS: gcp
       BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
@@ -341,6 +348,7 @@ jobs:
       file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
       params:
         BBL_STATE_DIR: consats-linux
+        BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
       input_mapping:
         bbl-state: updated-bbl-state
 
@@ -394,8 +402,10 @@ jobs:
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks
+    - get: cf-deployment-concourse-tasks-w-gcloud-image
   - task: cleanup-consats-linux-deployment
     file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
+    image: cf-deployment-concourse-tasks-w-gcloud-image
     params:
       BBL_STATE_DIR: consats-linux
       CLEAN_ALL: true
@@ -450,10 +460,12 @@ jobs:
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks
+    - get: cf-deployment-concourse-tasks-w-gcloud-image
     - get: windows-stemcell
       trigger: true
   - task: bbl-up
     file: cf-deployment-concourse-tasks/bbl-up/task.yml
+    image: cf-deployment-concourse-tasks-w-gcloud-image
     params:
       BBL_IAAS: gcp
       BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
@@ -480,6 +492,7 @@ jobs:
       file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
       params:
         BBL_STATE_DIR: consats-windows
+        BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
       input_mapping:
         bbl-state: updated-bbl-state
 
@@ -534,8 +547,10 @@ jobs:
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks
+    - get: cf-deployment-concourse-tasks-w-gcloud-image
   - task: cleanup-consats-windows-deployment
     file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
+    image: cf-deployment-concourse-tasks-w-gcloud-image
     params:
       BBL_STATE_DIR: consats-windows
     ensure:
@@ -565,8 +580,10 @@ jobs:
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks
+    - get: cf-deployment-concourse-tasks-w-gcloud-image
   - task: bbl-up
     file: cf-deployment-concourse-tasks/bbl-up/task.yml
+    image: cf-deployment-concourse-tasks-w-gcloud-image
     params:
       BBL_IAAS: gcp
       BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
@@ -593,6 +610,7 @@ jobs:
       file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
       params:
         BBL_STATE_DIR: consats-windows-turbulence
+        BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
       input_mapping:
         bbl-state: updated-bbl-state
 
@@ -648,8 +666,10 @@ jobs:
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks
+    - get: cf-deployment-concourse-tasks-w-gcloud-image
   - task: cleanup-consats-windows-deployment
     file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
+    image: cf-deployment-concourse-tasks-w-gcloud-image
     params:
       BBL_STATE_DIR: consats-windows-turbulence
     ensure:
