--- a/pipelines/consul.yml
+++ b/pipelines/consul.yml
@@ -43,16 +43,16 @@ resources:
     branch: master
     uri: https://github.com/cloudfoundry/cf-deployment.git
 
-- name: cf-deployment-concourse-tasks
+- name: cf-deployment-concourse-tasks-bbl4
   type: git
   source:
-    master: cloudfoundry
+    tag_filter: v4.19
     uri: https://github.com/cloudfoundry/cf-deployment-concourse-tasks.git
 
-- name: cf-deployment-concourse-tasks-w-gcloud-image
+- name: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
   type: docker-image
   source:
-    repository: cfinfrastructure/cf-deployment-concourse-tasks-w-gcloud
+    repository: cfinfrastructure/cf-deployment-concourse-tasks-w-gcloud-bbl4
 
 - name: consul-release-develop
   type: git
@@ -193,13 +193,14 @@ jobs:
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks
-    - get: cf-deployment-concourse-tasks-w-gcloud-image
+      resource: cf-deployment-concourse-tasks-bbl4
+    - get: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
     - get: stemcell
       resource: gcp-stemcell
       trigger: true
   - task: bbl-up
     file: cf-deployment-concourse-tasks/bbl-up/task.yml
-    image: cf-deployment-concourse-tasks-w-gcloud-image
+    image: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
     params:
       BBL_IAAS: gcp
       BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
@@ -251,10 +252,10 @@ jobs:
       resource: gcp-stemcell
     - get: latest-consul-release
     - get: turbulence-release
-    - get: cf-deployment-concourse-tasks-w-gcloud-image
+    - get: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
   - task: consats-linux-turbulence
     file: ci/scripts/consul/run-consats/task.yml
-    image: cf-deployment-concourse-tasks-w-gcloud-image
+    image: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
     params:
       BBL_STATE_DIR: consats-linux-turbulence
       PARALLEL_NODES: 3
@@ -262,7 +263,7 @@ jobs:
     ensure:
       task: delete-consats-linux-deployments
       file: ci/scripts/common/delete-deployments/task.yml
-      image: cf-deployment-concourse-tasks-w-gcloud-image
+      image: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
       params:
         BBL_STATE_DIR: consats-linux-turbulence
       input_mapping:
@@ -281,10 +282,11 @@ jobs:
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks
-    - get: cf-deployment-concourse-tasks-w-gcloud-image
+      resource: cf-deployment-concourse-tasks-bbl4
+    - get: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
   - task: cleanup-consats-linux-deployment
     file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
-    image: cf-deployment-concourse-tasks-w-gcloud-image
+    image: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
     params:
       BBL_STATE_DIR: consats-linux-turbulence
       CLEAN_ALL: true
@@ -316,13 +318,14 @@ jobs:
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks
-    - get: cf-deployment-concourse-tasks-w-gcloud-image
+      resource: cf-deployment-concourse-tasks-bbl4
+    - get: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
     - get: stemcell
       resource: gcp-stemcell
       trigger: true
   - task: bbl-up
     file: cf-deployment-concourse-tasks/bbl-up/task.yml
-    image: cf-deployment-concourse-tasks-w-gcloud-image
+    image: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
     params:
       BBL_IAAS: gcp
       BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
@@ -373,10 +376,10 @@ jobs:
       resource: gcp-stemcell
     - get: latest-consul-release
     - get: turbulence-release
-    - get: cf-deployment-concourse-tasks-w-gcloud-image
+    - get: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
   - task: consats-linux
     file: ci/scripts/consul/run-consats/task.yml
-    image: cf-deployment-concourse-tasks-w-gcloud-image
+    image: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
     params:
       BBL_STATE_DIR: consats-linux
       PARALLEL_NODES: 8
@@ -384,7 +387,7 @@ jobs:
     ensure:
       task: delete-consats-linux-deployments
       file: ci/scripts/common/delete-deployments/task.yml
-      image: cf-deployment-concourse-tasks-w-gcloud-image
+      image: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
       params:
         BBL_STATE_DIR: consats-linux
       input_mapping:
@@ -403,10 +406,11 @@ jobs:
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks
-    - get: cf-deployment-concourse-tasks-w-gcloud-image
+      resource: cf-deployment-concourse-tasks-bbl4
+    - get: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
   - task: cleanup-consats-linux-deployment
     file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
-    image: cf-deployment-concourse-tasks-w-gcloud-image
+    image: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
     params:
       BBL_STATE_DIR: consats-linux
       CLEAN_ALL: true
@@ -434,10 +438,10 @@ jobs:
       resource: infrastructure-ci
     - get: bosh-deployment
     - get: bosh-lite-stemcell
-    - get: cf-deployment-concourse-tasks-w-gcloud-image
+    - get: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
   - task: deploy-sample-manifest
     file: ci/scripts/common/deploy-sample-manifests/task.yml
-    image: cf-deployment-concourse-tasks-w-gcloud-image
+    image: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
     params:
       BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
       BBL_GCP_PROJECT_ID: {{gcp_project_id}}
@@ -462,12 +466,13 @@ jobs:
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks
-    - get: cf-deployment-concourse-tasks-w-gcloud-image
+      resource: cf-deployment-concourse-tasks-bbl4
+    - get: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
     - get: windows-stemcell
       trigger: true
   - task: bbl-up
     file: cf-deployment-concourse-tasks/bbl-up/task.yml
-    image: cf-deployment-concourse-tasks-w-gcloud-image
+    image: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
     params:
       BBL_IAAS: gcp
       BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
@@ -518,10 +523,10 @@ jobs:
       resource: gcp-stemcell
     - get: turbulence-release
     - get: latest-consul-release
-    - get: cf-deployment-concourse-tasks-w-gcloud-image
+    - get: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
   - task: consats-windows
     file: ci/scripts/consul/run-consats/task.yml
-    image: cf-deployment-concourse-tasks-w-gcloud-image
+    image: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
     params:
       BBL_STATE_DIR: consats-windows
       PARALLEL_NODES: 7
@@ -530,7 +535,7 @@ jobs:
     ensure:
       task: delete-consats-windows-deployments
       file: ci/scripts/common/delete-deployments/task.yml
-      image: cf-deployment-concourse-tasks-w-gcloud-image
+      image: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
       params:
         BBL_STATE_DIR: consats-windows
       input_mapping:
@@ -549,10 +554,11 @@ jobs:
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks
-    - get: cf-deployment-concourse-tasks-w-gcloud-image
+      resource: cf-deployment-concourse-tasks-bbl4
+    - get: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
   - task: cleanup-consats-windows-deployment
     file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
-    image: cf-deployment-concourse-tasks-w-gcloud-image
+    image: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
     params:
       BBL_STATE_DIR: consats-windows
     ensure:
@@ -583,10 +589,11 @@ jobs:
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks
-    - get: cf-deployment-concourse-tasks-w-gcloud-image
+      resource: cf-deployment-concourse-tasks-bbl4
+    - get: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
   - task: bbl-up
     file: cf-deployment-concourse-tasks/bbl-up/task.yml
-    image: cf-deployment-concourse-tasks-w-gcloud-image
+    image: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
     params:
       BBL_IAAS: gcp
       BBL_GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
@@ -638,10 +645,10 @@ jobs:
       resource: gcp-stemcell
     - get: turbulence-release
     - get: latest-consul-release
-    - get: cf-deployment-concourse-tasks-w-gcloud-image
+    - get: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
   - task: consats-windows
     file: ci/scripts/consul/run-consats/task.yml
-    image: cf-deployment-concourse-tasks-w-gcloud-image
+    image: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
     params:
       BBL_STATE_DIR: consats-windows-turbulence
       PARALLEL_NODES: 3
@@ -650,7 +657,7 @@ jobs:
     ensure:
       task: delete-consats-windows-deployments
       file: ci/scripts/common/delete-deployments/task.yml
-      image: cf-deployment-concourse-tasks-w-gcloud-image
+      image: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
       params:
         BBL_STATE_DIR: consats-windows-turbulence
       input_mapping:
@@ -669,10 +676,11 @@ jobs:
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks
-    - get: cf-deployment-concourse-tasks-w-gcloud-image
+      resource: cf-deployment-concourse-tasks-bbl4
+    - get: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
   - task: cleanup-consats-windows-deployment
     file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
-    image: cf-deployment-concourse-tasks-w-gcloud-image
+    image: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
     params:
       BBL_STATE_DIR: consats-windows-turbulence
     ensure:
@@ -702,7 +710,8 @@ jobs:
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
     - get: cf-deployment-concourse-tasks
-    - get: cf-deployment-concourse-tasks-w-gcloud-image
+      resource: cf-deployment-concourse-tasks-bbl4
+    - get: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
     - get: ops-files
       resource: empty-ops-files
     - get: cf-deployment
@@ -736,7 +745,7 @@ jobs:
         rebase: true
   - task: add-to-gcp-dns
     file: ci/scripts/common/manage-gcp-dns/task.yml
-    image: cf-deployment-concourse-tasks-w-gcloud-image
+    image: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
     params:
       BBL_STATE_DIR: consul-cf-cats
       GCP_DNS_PROJECT_ID: {{cf_infra_gcp_project_id}}
@@ -793,7 +802,8 @@ jobs:
       resource: infrastructure-ci-bbl-states
       passed: [cats]
     - get: cf-deployment-concourse-tasks
-    - get: cf-deployment-concourse-tasks-w-gcloud-image
+      resource: cf-deployment-concourse-tasks-bbl4
+    - get: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
   - task: delete-cf-deployment
     file: cf-deployment-concourse-tasks/bosh-delete-deployment/task.yml
     params:
@@ -804,7 +814,7 @@ jobs:
       BBL_STATE_DIR: consul-cf-cats
   - task: remove-from-gcp-dns
     file: ci/scripts/common/manage-gcp-dns/task.yml
-    image: cf-deployment-concourse-tasks-w-gcloud-image
+    image: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
     params:
       BBL_STATE_DIR: consul-cf-cats
       GCP_DNS_PROJECT_ID: {{cf_infra_gcp_project_id}}
