--- a/pipelines/dockerfiles.yml
+++ b/pipelines/dockerfiles.yml
@@ -7,6 +7,7 @@ groups:
   - deployment-docker-image
   - terraform-image
   - cf-deployment-concourse-tasks-w-gcloud-image
+  - cf-deployment-concourse-tasks-w-gcloud-bbl4-image
 
 resources:
 - name: terraform-dockerfile
@@ -49,6 +50,14 @@ resources:
     paths:
     - dockerfiles/cf-deployment-concourse-tasks-w-gcloud
 
+- name: cf-deployment-concourse-tasks-w-gcloud-bbl4-dockerfile
+  type: git
+  source:
+    uri: https://github.com/cloudfoundry/infrastructure-ci
+    branch: master
+    paths:
+    - dockerfiles/cf-deployment-concourse-tasks-w-gcloud-bbl4
+
 - name: ubuntu-docker-image
   type: docker-image
   source:
@@ -65,6 +74,14 @@ resources:
   type: docker-image
   source:
     repository: cfinfrastructure/cf-deployment-concourse-tasks-w-gcloud
+    username: {{docker-username}}
+    password: {{docker-password}}
+    email: {{docker-email}}
+
+- name: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
+  type: docker-image
+  source:
+    repository: cfinfrastructure/cf-deployment-concourse-tasks-w-gcloud-bbl4
     username: {{docker-username}}
     password: {{docker-password}}
     email: {{docker-email}}
@@ -195,4 +212,17 @@ jobs:
     - put: cf-deployment-concourse-tasks-w-gcloud-image
       params:
         build: infrastructure-ci/dockerfiles/cf-deployment-concourse-tasks-w-gcloud
+        cache: false
+
+- name: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
+  public: true
+  plan:
+  - do:
+    - aggregate:
+      - get: infrastructure-ci
+        resource: cf-deployment-concourse-tasks-w-gcloud-bbl4-dockerfile
+        trigger: true
+    - put: cf-deployment-concourse-tasks-w-gcloud-bbl4-image
+      params:
+        build: infrastructure-ci/dockerfiles/cf-deployment-concourse-tasks-w-gcloud-bbl4
         cache: false
